added minimal full

--- a/app/views/minimal-full.slim
+++ b/app/views/minimal-full.slim
@@ -13,11 +13,14 @@ head
   == partial(:'shared/meta')
   == partial(:'shared/scripts')
   == css :application
-  == css :advanced
+  == css :minimal
 
 body
 
   .form
+    .form-header
+      h1 Kale Krate
+
     .form-bar
       .subscription-name-container
         strong.subscription-name Kale Lover's Crate
@@ -31,43 +34,40 @@ body
       .confirmation-body
         h2.confirmation-messaging Thank you for subscribing!
 
+
     form method="post" action="/api/subscriptions/new"
       input type="hidden" data-recurly="token" name="recurly-token"
+
       .row
         .form-errors.form-errors__hidden
           strong Oops! The following fields appear to be invalid:
           ul
 
       .row.customer-fields--name
-        .form-input
+        .form-input.form-input__first_name
           label for="first_name" First Name
           input type="text" data-recurly="first_name" id="first_name" name="first-name"
 
-        .form-input
+        .form-input.form-input__last_name
           label for="last_name" Last Name
           input type="text" data-recurly="last_name" id="last_name" name="last-name"
 
-      .row.customer-fields--email
-        .form-input
-          label for="email" Email
-          input type="text" data-recurly="email" id="email" name="email"
-
       .row.customer-fields--card-number
-        .form-input
+        .form-input.form-input__number
           label for="number" Credit Card Number
           input type="text" data-recurly="number" id="number" name="number"
           span.icon.icon-card.icon-card__generic
           span.icon.icon-lock
 
       .row.customer-fields--card-details
-        .form-input.form-input__selection.customer-fields--card-expiry
+        .form-input.form-input__selection.customer-fields--card-expiry.form-input__month.form-input__year
           label for="month" Expiration
           input type="text" data-recurly="month" id="month" name="month" placeholder="MM" maxlength="2"
           input type="text" data-recurly="year" id="year" name="year" placeholder="YY" maxlength="2"
 
-        .form-input.customer-fields--card-cvv
+        .form-input.customer-fields--card-cvv.form-input__cvv
           label for="cvv" CVC
-          input type="text" data-recurly="cvv" id="cvv" name="cvv"
+          input type="text" data-recurly="cvv" id="cvv" name="cvv" maxlength="4"
 
       .row.customer-fields--address
         .form-input
@@ -79,21 +79,20 @@ body
           label for="city" City
           input type="text" data-recurly="city" id="city" name="city"
 
-
-        .form-input.customer-fields--card-cvv
-          label for="postal_code" Zip
-          input type="text" data-recurly="postal_code" id="postal_code" name="postal-code"
-
       .row
+        .form-input
+          label for="postal_code" State
+          select id="state" name="state"
+            == StatesList.to_options
+
+        .form-input
+          label for="postal_code" Zip Code
+          input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" maxlength="5"
+
         .form-input
           label for="postal_code" Country
           select id="country" name="country"
             == StatesList.to_options
-
-      .row
-        .form-input
-          header.order-summary-title
-            h2 Order Summary
 
       .row
         input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
@@ -121,6 +120,7 @@ javascript:
     // Reset the errors display
     $('#errors').text('');
     $('input').removeClass('error');
+    $('.form-input').removeClass('form-input__error');
 
     // Disable the submit button
     $('.btn-submit').prop('disabled', true);
@@ -131,6 +131,8 @@ javascript:
     // to tokenize the credit card information, then injects the token into the
     // data-recurly="token" field above
     recurly.token(form, function (err, token) {
+
+      console.log(err);
 
       if (err) {
         error(err);
@@ -180,10 +182,12 @@ javascript:
         $(number_field).addClass('form-input__error');
       }
 
-      if(card_type == 'default') {
+      if((card_type == 'default') || (card_type == 'unknown')) {
         $('.icon-card').addClass('icon-card__generic');
+        $('.icon-card').removeClass('icon-card__visa icon-card__mastercard icon-card__amex icon-card__visa discover');
       }
       else {
+        $('.icon-card').removeClass('icon-card__generic');
         $('.icon-card').addClass('icon-card__' + card_type);
       }
     });
@@ -194,7 +198,7 @@ javascript:
   // A simple error handling function to expose errors to the customer
   function error (err) {
     var errors_markup = $.map(err.fields, function (field) {
-      $('input[data-recurly=' + field + ']').addClass('error');
+      $('.form-input__' + field).addClass('form-input__error');
       return '<li class="form-errors--invalid-field">'+ error_fields[field] +'</li>';
     }).join('');
 
