modified minimal full

--- a/app/views/minimal_full.slim
+++ b/app/views/minimal_full.slim
@@ -79,7 +79,7 @@ body
           label for="city" City
           input type="text" data-recurly="city" id="city" name="city"
 
-      .row
+      .row.customer-fields--card-details
         .form-input
           label for="postal_code" State
           select id="state" name="state"
