modified minimal full

--- a/app/views/minimal_full.slim
+++ b/app/views/minimal_full.slim
@@ -13,7 +13,7 @@ head
   == partial(:'shared/meta')
   == partial(:'shared/scripts')
   == css :application
-  == css :minimal
+  == css :minimal_full
 
 body
 
