--- a/app/views/minimal_full.slim
+++ b/app/views/minimal_full.slim
@@ -92,6 +92,7 @@ body
 
         .form-input
           label for="postal_code" Country
+          .select-wrap
           select id="country" name="country"
             == StatesList.to_options
 
