sizing on minimal full

--- a/app/views/minimal_full.slim
+++ b/app/views/minimal_full.slim
@@ -52,6 +52,11 @@ body
           label for="last_name" Last Name
           input type="text" data-recurly="last_name" id="last_name" name="last-name"
 
+      .row.customer-fields--email
+        .form-input.form-input__email
+          label for="email" Email
+          input type="text" data-recurly="email" id="email" name="email"
+
       .row.customer-fields--card-number
         .form-input.form-input__number
           label for="number" Credit Card Number
@@ -91,7 +96,7 @@ body
           input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" maxlength="5"
 
         .form-input
-          label for="postal_code" Country
+          label for="country" Country
           .select-wrap
           select id="country" name="country"
             == StatesList.to_options
