token not working?

--- a/app/views/minimal_full.slim
+++ b/app/views/minimal_full.slim
@@ -118,7 +118,9 @@ javascript:
   }
 
   // Configure recurly.js
-  recurly.configure('9bed482cacae41748f405c2d361fdc6a');
+  //recurly.configure('9bed482cacae41748f405c2d361fdc6a');
+  recurly.configure('sc-Hw20ERMh8bzGFiWKO7NvDB');
+  
 
   // On form submit, we stop submission to go get the token
   $('form').on('submit', function (event) {
