--- a/app/views/minimal_full.slim
+++ b/app/views/minimal_full.slim
@@ -145,7 +145,7 @@ javascript:
         var data = {
           "recurly-token": $('input[name="recurly-token"]').val(),
           "first-name": $('input[name="first-name"]').val(),
-          "last-name": $('input[name="last-name"]').val(),
+          "last-name": $('input[name="last-name"]').val()
           //"email": $('input[name="email"]').val()
         };
 
