--- a/app/views/minimal.slim
+++ b/app/views/minimal.slim
@@ -52,11 +52,6 @@ body
           label for="last_name" Last Name
           input type="text" data-recurly="last_name" id="last_name" name="last-name"
 
-      .row.customer-fields--email
-        .form-input.form-input__email
-          label for="email" Email
-          input type="text" data-recurly="email" id="email" name="email"
-
       .row.customer-fields--card-number
         .form-input.form-input__number
           label for="number" Credit Card Number
@@ -95,7 +90,8 @@ javascript:
   }
 
   // Configure recurly.js
-  recurly.configure('9bed482cacae41748f405c2d361fdc6a');
+  //recurly.configure('9bed482cacae41748f405c2d361fdc6a');
+  recurly.configure('sc-Hw20ERMh8bzGFiWKO7NvDB');
 
   // On form submit, we stop submission to go get the token
   $('form').on('submit', function (event) {
@@ -125,8 +121,8 @@ javascript:
         var data = {
           "recurly-token": $('input[name="recurly-token"]').val(),
           "first-name": $('input[name="first-name"]').val(),
-          "last-name": $('input[name="last-name"]').val(),
-          "email": $('input[name="email"]').val()
+          "last-name": $('input[name="last-name"]').val()
+          //"email": $('input[name="email"]').val()
         };
 
         $.ajax({
