--- a/app/views/one_time.slim
+++ b/app/views/one_time.slim
@@ -24,6 +24,9 @@ body
     .form-bar
       .subscription-name-container
         strong.subscription-name Salad Spinner
+
+      input type="number" value="1" min="1"
+
       .subscription-pricing-container
         .subscription-pricing
           span.subscription-price $9.99
