--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -119,6 +119,21 @@ input[type='submit'] {
   }
 }
 
+.form {
+  background-color: #FAFAFA;
+  margin: 0 auto;
+  overflow: hidden;
+
+  @include mq($small) {
+    @include border-radius(5px);
+    @include box-shadow(0px 2px 0px #EBEBEB);
+
+    border: 1px solid #D1DBDF;
+    margin: 20px auto 20px auto;
+    width: grid-width(6);
+  }
+}
+
   .btn-submit {
     margin-top: 20px;
   }
