advanced addons container

--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -98,6 +98,7 @@ body
           h2 Order Summary
         section.order-summary-details
           .row.order-summary
+          .addons-container
             div
               | Total
               span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
