trying order summary details

--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -98,9 +98,12 @@ body
           h2 Order Summary
         section.order-summary-details
           .row.order-summary
+            div.addons-summary-container
             div
               | Total
               span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
+
+
 
           .row
             input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
