trying order summary details

--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -109,3 +109,4 @@ body
             input type='submit' id="subscribe" class="btn-submit" value="Subscribe"
 
   == partial(:'handlebars/addons')
+  == partial(:'handlebars/addons_summary')
