trying order summary details

--- a/app/views/handlebars/addons_summary.slim
+++ b/app/views/handlebars/addons_summary.slim
@@ -11,6 +11,7 @@ handlebar id="addon-summary-template" type="text/x-handlebars-template"
             span data-recurly="currency_symbol"
             span data-recurly="addon_price" data-recurly-addon='{{code}}'
               | {{price}}
-        span data-recurly-addon='{{quantity}}'
+        span data-recurly-addon='{{quantity}}' | {{quantity}}
+        span data-recurly='{{quantity}}' | {{quantity}}
       | {{/list}}
   | {{/if}}
