--- a/app/views/handlebars/addons_summary.slim
+++ b/app/views/handlebars/addons_summary.slim
@@ -8,10 +8,10 @@ handlebar id="addon-summary-template" type="text/x-handlebars-template"
           | {{name}}
         .addon-item--pricing
           span.addon-item--price
-            span data-recurly="currency_symbol" | {{symbol}}
+            span data-recurly="currency_symbol" {{currency_symbol}}
             span data-recurly="addon_price" data-recurly-addon='{{code}}'
               | {{price}}
-        span data-recurly-addon='{{quantity}}' | {{quantity}}
-        span data-recurly='{{quantity}}' | {{quantity}}
+        span data-recurly-addon='{{quantity}}' {{quantity}}
+
       | {{/list}}
   | {{/if}}
