--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -21,7 +21,6 @@ body
   .confirmation
       .confirmation-body
         h2.confirmation-messaging Thank you for subscribing.
-        You will be billed every month.
 
   form
     input type="hidden" data-recurly="currency" id="plan_currency" name="plan-currency" value="USD"
@@ -103,7 +102,7 @@ body
           .row.order-summary
             div.addons-summary-container
               input type="text" data-recurly="coupon" placeholder="Enter coupon code"
-              input type="button" class="btn-submit" id="apply-coupon" Apply
+              input type="button" class="btn-submit" id="apply-coupon" value="Apply"
               div
                 | Tax
                 span data-recurly="tax_now"
