--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -244,6 +244,7 @@ form {
       width: 100%;
     }
 
-.select-wrap:after {
-  background: #91C11E;
-}
+  .subscription-name-container select {
+    background:  #91C11E;
+  }
+   
