--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -112,6 +112,7 @@ body
               span.symbol $
               span data-recurly="tax_now"
             div.total
+              span.addon-item--name
               | Total
               span.symbol $
               span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
