--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -118,6 +118,10 @@
       color: #48626c;
     }
 
+    .addon-item--quantity {
+        float:right;
+    }
+
       input[data-recurly="addon"] {
         width: 30px;
         height: 30px;
