--- a/app/views/handlebars/addons_summary.slim
+++ b/app/views/handlebars/addons_summary.slim
@@ -11,7 +11,7 @@ handlebar id="addon-summary-template" type="text/x-handlebars-template"
 
             span data-recurly="addon_price" data-recurly-addon='{{code}}'
               | ${{price}}
-        span.quantity data-recurly-addon='{{quantity}}' {{quantity}}x
+        span.addon-item--quantity data-recurly-addon='{{quantity}}' {{quantity}}x
 
       | {{/list}}
   | {{/if}}
