--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -113,8 +113,9 @@ body
               span data-recurly="tax_now"
             div.total
               | Total
-              span.symbol $
-              span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
+              span.total-amount
+                span.symbol $
+                span data-recurly="total_now" id="total_now" name="total-now" class="order-summary--total"
 
 
 
