--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -283,8 +283,8 @@ form {
     top: 1px;
   }
 
-  .subscription-name-container .select-wrap {
-
+  .subscription-name-container .select-wrap:after {
+    content:url('/images/icons/select-arrow-green.png');
   }
 
   .subscription-name-container .quantity-wrap {
