--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -120,7 +120,7 @@
 
     .addon-item--quantity-summary {
         position: absolute;
-        right: 20%;
+        right: 30%;
         top: 32%;
     }
 
@@ -288,13 +288,14 @@ form {
   }
 
   .subscription-name-container .quantity-wrap {
-    width:30%;
+      width:30%;
+      margin-top:20px;
   }
 
   .subscription-name-container input.quantity {
     position:static;
-    margin-top:20px;
     margin-left:5px;
+    width:98%;
   }
 
   .customer-fields--card-details .form-input:nth-child(2) {
@@ -310,16 +311,21 @@ form {
     position:relative;
     padding: 20px;
     float:right;
-    border-top:1px solid #e2e7e9;
+    border-top:2px solid #e2e7e9;
     width:100%;
     text-align:right;
     font-size: 22px;
     color: #48626c;
     span.total-amount {
-      width:30%;
-      position:absolute;
-      right:20px;
+      display: inline-block;
+      font-size: 16px;
+      margin-left: 10%;
+      width:20%;
     }
+  }
+  .tax {
+    font-size:16px;
+    border-top:0;
   }
 
 
