--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -303,8 +303,8 @@ form {
   }
 
   input[type="submit"] {
-    width:90%;
-    margin:20px;
+    margin: 0 12px 20px;
+    width: 94%;
   }
 
   .total, .tax {
