--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -84,6 +84,7 @@ body
             .form-input.form-input__city
               input type="text" data-recurly="city" id="city" name="city" class="form-input__required" placeholder="City"
 
+          .row
             .form-input.form-input__state
               select data-recurly="state" id="state" name="state" class="form-input__required"
                 option State
@@ -91,7 +92,7 @@ body
 
             .form-input.form-input__postal-code
               input type="text" data-recurly="postal_code" id="postal_code" name="postal-code" class="form-input__required" placeholder="Zip Code"
-
+          .row
             .form-input.form-input__country
               select data-recurly="country" id="country" name="country" class="form-input__required"
                 option Country
