--- a/app/views/handlebars/addons.slim
+++ b/app/views/handlebars/addons.slim
@@ -6,6 +6,7 @@ handlebar id="addon-template" type="text/x-handlebars-template"
     ul.addons-list
       | {{#list}}
       li.addons-list--item
+        input type="checkbox" name="{{code}}"
         span.addon-item--name
           | {{name}}
         .addon-item--pricing
