--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -152,6 +152,18 @@
         width: 30px;
       }
 
+.pay-with-amazon-container {
+  display: inline-block;
+  padding: 25px 0 20px;
+  width: 100%;
+  text-align: center;
+  box-sizing: border-box;
+
+  .widget-container {
+    margin: 0 10px 10px !important;
+  }
+}
+
 form {
   display: block;
   margin: 0 auto;
