Fixes up UI and display issues for Amazon payments
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
+++ b/app/assets/stylesheets/themes/kalekrate/form-advanced.scss
@@ -158,9 +158,11 @@
   width: 100%;
   text-align: center;
   box-sizing: border-box;
+  margin: 0 auto;
+  text-align: center;
 
   .widget-container {
-    margin: 0 10px 10px !important;
+    display: inline-block !important;
   }
 }
 
