--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -100,6 +100,14 @@ body
                   option Country
                   == StatesList.to_options
 
+          .row
+            ul
+              li 
+                input type="text" data-recurly="coupon" value="test"
+                span data-recurly="currency_symbol"
+                span data-recurly="discount_now"
+                span data-recurly="discount_next"
+
       .order-summary-container
         header.order-summary-title
           h2 Order Summary
