advanced mobile coupon

--- a/app/views/advanced_v2.slim
+++ b/app/views/advanced_v2.slim
@@ -108,7 +108,7 @@ body
             div.addons-summary-container
             div.coupon
               a.coupon-text href="#" Enter coupon code
-                span.coupon-blank &mdash;
+                span.coupon-blank -
               span.hidden  
                 input type="text" data-recurly="coupon" value="test"
                 input type="button" id="enter-coupon" value="Apply" class="btn-submit"
